Add examples - calculator

--- a/README.html
+++ b/README.html
@@ -116,6 +116,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
         </ul></li>
         <li><a href="#an-abstract-computation-step">An abstract computation step</a></li>
         <li><a href="#toward-implementation">Toward implementation</a></li>
+        <li><a href="#an-example">An example</a></li>
         </ul></li>
         <li><a href="#appendix">Appendix</a>
         <ul>
@@ -221,6 +222,9 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
             <li><code>config</code> is a nested <code>Map</code> where the first level keys are chosen to be simply an identifier of the pipeline step. Other approaches can be taken here, but that’s what we did.</li>
             </ul>
             <p>This can be a triplet, or a list with mixed types. In Groovy, both can be used interchangeably.</p>
+            <p>The output of a pipeline step/mudules adheres to the same structure so that pipeline steps can easily be chained.</p>
+            <h2 id="an-example">An example</h2>
+            <p>Use add/subtract for this?!</p>
             <hr />
             <h1 id="appendix">Appendix</h1>
             <h2 id="caveats-and-tips">Caveats and Tips</h2>
